// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme mount basic 1`] = `
.emotion-0 {
  background-color: red;
}

<Greeting>
  <div
    className="emotion-0"
  >
    hello
  </div>
</Greeting>
`;

exports[`enzyme mount conditional styles 1`] = `
.emotion-0 {
  background-color: black;
}

<div
  className="emotion-0"
>
  <span
    className="emotion-1"
  >
    Test content
  </span>
</div>
`;

exports[`enzyme mount displayName 1`] = `
.emotion-0 {
  color: hotpink;
}

<CustomDisplayName
  className="emotion-0"
>
  <div
    className="emotion-0"
  >
    Hello
  </div>
</CustomDisplayName>
`;

exports[`enzyme mount empty styled 1`] = `
<Greeting>
  <div
    className="emotion-0 emotion-1"
  >
    Hello
  </div>
</Greeting>
`;

exports[`enzyme mount fragment with multiple css prop elements 1`] = `
.emotion-0 {
  background-color: hotpink;
}

.emotion-1 {
  background-color: green;
}

.emotion-2 {
  background-color: blue;
}

<Component>
  <div
    className="emotion-0"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-2"
  />
</Component>
`;

exports[`enzyme mount multiple selected components 1`] = `
[
  .emotion-0 {
  background-color: hotpink;
}

<li
    className="emotion-0"
    data-item={true}
  >
    hello
  </li>,
  .emotion-0 {
  background-color: blue;
}

<li
    className="emotion-0"
    data-item={true}
  >
    beautiful
  </li>,
  .emotion-0 {
  background-color: green;
}

<li
    className="emotion-0"
    data-item={true}
  >
    world
  </li>,
]
`;

exports[`enzyme mount nested 1`] = `
.emotion-0 {
  background-color: red;
}

<div>
  <Greeting>
    <div
      className="emotion-0"
    >
      hello
    </div>
  </Greeting>
</div>
`;

exports[`enzyme mount nested displayName 1`] = `
.emotion-0 {
  color: hotpink;
}

<div>
  <CustomDisplayName
    className="emotion-0"
  >
    <div
      className="emotion-0"
    >
      Hello
    </div>
  </CustomDisplayName>
</div>
`;

exports[`enzyme mount nested styled 1`] = `
.emotion-0 {
  background-color: red;
}

<div>
  <Greeting>
    <div
      className="emotion-0 emotion-1"
    >
      Hello
    </div>
  </Greeting>
</div>
`;

exports[`enzyme mount nested styled with css prop 1`] = `
.emotion-0 {
  background-color: black;
}

.emotion-1 {
  color: red;
  background-color: black;
}

<div>
  <Button
    className="emotion-0"
  >
    <button
      className="emotion-1 emotion-2"
    >
      iChenLei
    </button>
  </Button>
</div>
`;

exports[`enzyme mount parent and child using css property 1`] = `
.emotion-0 {
  background-color: black;
}

.emotion-1 {
  color: white;
}

<div
  className="emotion-0"
>
  Test content
  <div
    className="emotion-1"
  />
</div>
`;

exports[`enzyme mount styled 1`] = `
.emotion-0 {
  background-color: red;
}

<Greeting>
  <div
    className="emotion-0 emotion-1"
  >
    Hello
  </div>
</Greeting>
`;

exports[`enzyme mount styled with css prop 1`] = `
.emotion-0 {
  background-color: black;
}

.emotion-1 {
  color: red;
  background-color: black;
}

<Button
  className="emotion-0"
>
  <button
    className="emotion-1 emotion-2"
  >
    iChenLei
  </button>
</Button>
`;

exports[`enzyme mount theming 1`] = `
.emotion-0 {
  color: red;
  border: 2px solid red;
}

.emotion-2 {
  color: blue;
  border: 2px solid blue;
}

<div>
  <Button>
    <button
      className="emotion-0 emotion-1"
    >
      Normal
    </button>
  </Button>
  <ThemeProvider
    theme={
      {
        "main": "blue",
      }
    }
  >
    <Button>
      <button
        className="emotion-2 emotion-1"
      >
        Themed
      </button>
    </Button>
  </ThemeProvider>
</div>
`;

exports[`enzyme mount unmatched selector 1`] = `null`;

exports[`enzyme mount with array of styles as css prop 1`] = `
.emotion-0 {
  background-color: black;
  color: white;
}

<div
  className="emotion-0"
>
  Test content
</div>
`;

exports[`enzyme mount with array of styles in a composite inner child 1`] = `
.emotion-0 {
  background-color: black;
  color: white;
}

<div>
  <Inner
    className="emotion-0"
  >
    <span
      className="emotion-0"
    >
      Test content
    </span>
  </Inner>
</div>
`;

exports[`enzyme mount with prop containing css element 1`] = `
.emotion-0 {
  background-color: blue;
}

<Greeting
  content={
    <p
      css="unknown styles"
    >
      Hello
    </p>
  }
>
  <div>
    <p
      className="emotion-0"
    >
      Hello
    </p>
     
    World!
  </div>
</Greeting>
`;

exports[`enzyme mount with prop containing css element not at the top level 1`] = `
.emotion-0 {
  background-color: blue;
}

<div>
  <Greeting
    content={
      <p
        css="unknown styles"
        id="something"
      >
        Hello
      </p>
    }
  >
    <div>
      <p
        className="emotion-0"
        id="something"
      >
        Hello
      </p>
       
      World!
    </div>
  </Greeting>
</div>
`;

exports[`enzyme mount with prop containing css element with other label 1`] = `
.emotion-0 {
  background-color: blue;
}

<Greeting
  content={
    <p
      css="unknown styles"
      id="something"
    >
      Hello
    </p>
  }
>
  <Thing
    content={
      <div
        css="unknown styles"
      />
    }
  >
    <p
      className="emotion-0"
      id="something"
    >
      Hello
    </p>
     
    World!
  </Thing>
</Greeting>
`;

exports[`enzyme mount with prop containing css element with other props 1`] = `
.emotion-0 {
  background-color: blue;
}

<Greeting
  content={
    <p
      css="unknown styles"
      id="something"
    >
      Hello
    </p>
  }
>
  <div>
    <p
      className="emotion-0"
      id="something"
    >
      Hello
    </p>
     
    World!
  </div>
</Greeting>
`;

exports[`enzyme mount with prop containing regular element 1`] = `
<Test
  element={
    <button>
      Foo
    </button>
  }
>
  <button>
    Foo
  </button>
</Test>
`;

exports[`enzyme mount with styles on top level 1`] = `
.emotion-0 {
  background-color: red;
}

<Greeting
  className="emotion-0"
>
  <div
    className="emotion-0"
  >
    Hello
  </div>
</Greeting>
`;

exports[`enzyme shallow basic 1`] = `
.emotion-0 {
  background-color: red;
}

<div
  className="emotion-0"
>
  hello
</div>
`;

exports[`enzyme shallow conditional styles 1`] = `
.emotion-0 {
  background-color: black;
}

<div
  className="emotion-0"
>
  <span
    css="unknown styles"
  >
    Test content
  </span>
</div>
`;

exports[`enzyme shallow displayName 1`] = `
.emotion-0 {
  color: hotpink;
}

<CustomDisplayName
  className="emotion-0"
/>
`;

exports[`enzyme shallow empty styled 1`] = `
<div
  className="emotion-0 emotion-1"
>
  Hello
</div>
`;

exports[`enzyme shallow fragment with multiple css prop elements 1`] = `
.emotion-0 {
  background-color: hotpink;
}

.emotion-1 {
  background-color: green;
}

.emotion-2 {
  background-color: blue;
}

<Fragment>
  <div
    className="emotion-0"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-2"
  />
</Fragment>
`;

exports[`enzyme shallow multiple selected components 1`] = `
[
  .emotion-0 {
  background-color: hotpink;
}

<li
    className="emotion-0"
    data-item={true}
  >
    hello
  </li>,
  .emotion-0 {
  background-color: blue;
}

<li
    className="emotion-0"
    data-item={true}
  >
    beautiful
  </li>,
  .emotion-0 {
  background-color: green;
}

<li
    className="emotion-0"
    data-item={true}
  >
    world
  </li>,
]
`;

exports[`enzyme shallow nested 1`] = `
<div>
  <Greeting>
    hello
  </Greeting>
</div>
`;

exports[`enzyme shallow nested displayName 1`] = `
.emotion-0 {
  color: hotpink;
}

<div>
  <CustomDisplayName
    className="emotion-0"
  />
</div>
`;

exports[`enzyme shallow nested styled 1`] = `
<div>
  <Greeting>
    Hello
  </Greeting>
</div>
`;

exports[`enzyme shallow nested styled with css prop 1`] = `
.emotion-0 {
  background-color: black;
}

<div>
  <Button
    className="emotion-0"
  >
    iChenLei
  </Button>
</div>
`;

exports[`enzyme shallow parent and child using css property 1`] = `
.emotion-0 {
  background-color: black;
}

.emotion-1 {
  color: white;
}

<div
  className="emotion-0"
>
  Test content
  <div
    className="emotion-1"
  />
</div>
`;

exports[`enzyme shallow styled 1`] = `
.emotion-0 {
  background-color: red;
}

<div
  className="emotion-0 emotion-1"
>
  Hello
</div>
`;

exports[`enzyme shallow styled with css prop 1`] = `
.emotion-0 {
  background-color: black;
}

<Button
  className="emotion-0"
>
  iChenLei
</Button>
`;

exports[`enzyme shallow theming 1`] = `
<div>
  <Button>
    Normal
  </Button>
  <ThemeProvider
    theme={
      {
        "main": "blue",
      }
    }
  >
    <Button>
      Themed
    </Button>
  </ThemeProvider>
</div>
`;

exports[`enzyme shallow unmatched selector 1`] = `null`;

exports[`enzyme shallow with array of styles as css prop 1`] = `
.emotion-0 {
  background-color: black;
  color: white;
}

<div
  className="emotion-0"
>
  Test content
</div>
`;

exports[`enzyme shallow with array of styles in a composite inner child 1`] = `
.emotion-0 {
  background-color: black;
  color: white;
}

<div>
  <Inner
    className="emotion-0"
  >
    Test content
  </Inner>
</div>
`;

exports[`enzyme shallow with prop containing css element 1`] = `
.emotion-0 {
  background-color: blue;
}

<div>
  <p
    className="emotion-0"
  >
    Hello
  </p>
   
  World!
</div>
`;

exports[`enzyme shallow with prop containing css element not at the top level 1`] = `
<div>
  <Greeting
    content={
      <p
        css="unknown styles"
        id="something"
      >
        Hello
      </p>
    }
  >
    World!
  </Greeting>
</div>
`;

exports[`enzyme shallow with prop containing css element with other label 1`] = `
.emotion-0 {
  background-color: blue;
}

<Thing
  content={
    <div
      css="unknown styles"
    />
  }
>
  <p
    className="emotion-0"
    id="something"
  >
    Hello
  </p>
   
  World!
</Thing>
`;

exports[`enzyme shallow with prop containing css element with other props 1`] = `
.emotion-0 {
  background-color: blue;
}

<div>
  <p
    className="emotion-0"
    id="something"
  >
    Hello
  </p>
   
  World!
</div>
`;

exports[`enzyme shallow with prop containing regular element 1`] = `
<button>
  Foo
</button>
`;

exports[`enzyme shallow with styles on top level 1`] = `
.emotion-0 {
  background-color: red;
}

<Greeting
  className="emotion-0"
>
  Hello
</Greeting>
`;

exports[`enzyme with prop containing css element in fragment 1`] = `
.emotion-0 {
  background-color: blue;
}

<div>
  x
  [
    "",
    <div
      className="emotion-0"
    >
      y
    </div>,
  ]
</div>
`;
